--- a/css/04.gallery.css
+++ b/css/04.gallery.css
@@ -14,4 +14,42 @@
 	height: 80%;
 	/* 내 부모의 80% */
 	/* 그래서 늘어도 줄어도 항상 80%를 유지하게 된다. */
+	display: flex;
+}
+
+.gallery-wrapper .img-wrap {
+	flex: auto;
+	/* 늘어들고1 줄어들엉1 */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* 위 3개는 가운데 배치하는 거 */
+}
+
+.gallery-wrapper .img-wrap img {
+	max-width: 80%;
+	max-height: 80%;
+}
+
+.gallery-wrapper .thumb-wrap {
+	flex:none; 
+	/* 늘어나지도0 줄어들지도0 마 */
+	width: 200px;
+	background-color: #eee;
+	display: flex;
+	flex-direction: column;
+	/* 밑으로 서게끔 정렬 , 플렉스디렉션 컬럼 안주면 옆으로 정렬된다.*/
+	overflow-y: auto;
+	/* 스크롤 만듬 */
+}
+
+.gallery-wrapper .thumb-wrap .thumb {
+	width: 100%;
+	flex: none;
+	padding: 3%;
+}
+
+.gallery-wrapper .thumb-wrap .thumb img {
+	width: 100%;
+	cursor: pointer;
 }
