--- a/css/04.gallery.css
+++ b/css/04.gallery.css
@@ -46,7 +46,7 @@
 .gallery-wrapper .thumb-wrap .thumb {
 	width: 100%;
 	flex: none;
-	padding: 3%;
+	padding: 4% 8%;
 }
 
 .gallery-wrapper .thumb-wrap .thumb img {
